// created player and player movement

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1000">
+        Title="MainWindow" Height="900" Width="1000" KeyDown="Window_KeyDown">
     <Grid x:Name="Origin">
         <Grid.RowDefinitions>
             <RowDefinition/>
